apps/routers/commits-to-prod/commits-to-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: commits-to
  namespace: traefik-staging
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`commits.to`,`giovanni.commits.to`,`nwinter.commits.to`,`patrick.commits.to`,`thameera.commits.to`,`madge.commits.to`,`xenocid.commits.to`,`alok.commits.to`,`luke.commits.to`,`eugeniobruno.commits.to`,`arti.commits.to`,`brian.commits.to`,`michael.commits.to`,`chris.commits.to`,`forrest.commits.to`,`byorgey.commits.to`,`az.commits.to`,`sergii.commits.to`,`kim.commits.to`,`edyson.commits.to`,`bee.commits.to`,`max.commits.to`,`kevin.commits.to`,`philip.commits.to`,`alex.commits.t [...]
    services:
    - name: commits-to
      namespace: traefik-staging
      port: 443
  tls:
    passthrough: true
